[package]
name = "wix-sheets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
dyn-clonable = "0.9.0"
dyn-clone = "1.0.11"
dyn-eq = "0.1.2"
nom = "7.1.3"
reqwest = { version = "0.11.18", features = ["blocking"]}
serde = { version = "1.0.165", features = ["derive"] }
serde_json = "1.0.99"
thiserror = "1.0.43"
